main.tf
# Configure the AWS Provider
provider "aws" {
  region  = "us-east-1"
}

resource "aws_vpc" "main" {
 cidr_block = "10.1.0.0/16"
 tags ={
   Name = "Testing VPC"
 }
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
}

resource "aws_subnet" "main" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.1.0.0/24"
    availability_zone ="us-east-1a"
}

resource "aws_route_table" "default" {
 vpc_id = aws_vpc.main.id
 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.main.id
 }
}
resource "aws_route_table_association" "main" {
  subnet_id = aws_subnet.main.id
  route_table_id = aws_route_table.default.id
}

resource "aws_network_acl" "allowall" {
 vpc_id = aws_vpc.main.id
 egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

}

resource "aws_security_group" "allowall" {
  name  = "ssh acl"
 vpc_id = aws_vpc.main.id
 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# resource "aws_eip" "webserver" {
#   instance = aws_instance.webserver.id
#   vpc = true
#   depends_on = ["aws_internet_gateway.main"]
# }

variable "key_path" {
  description = "SSH Public Key path"
  default="./keys/aws_terraform.pub"
}

resource "aws_key_pair" "default" {
  key_name = "testing"
  public_key = file(var.key_path)
}
